Fix an error that sometimes the request data token is too long

--- a/superset/assets/stylesheets/solarbi.less
+++ b/superset/assets/stylesheets/solarbi.less
@@ -117,6 +117,7 @@ input {
 .list-alert-top {
   position: absolute;
   width: 70%;
+  z-index: 999;
 }
 .alert-top {
   position: absolute;
